--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -872,3 +872,236 @@ $spacing: 10;
   
 }
 // common image box end here
+.mt-200{
+  margin-top: 200px;
+}
+
+
+// blue border input fields
+.blue-bordered{
+  width: 100%;
+  overflow: hidden;
+  border-radius:8px;
+  .MuiFilledInput-underline::after,
+  .MuiFilledInput-underline:before{
+    border-color: transparent;
+  }
+  .MuiInputLabel-formControl {
+      top: 0px;
+      left: 5px;
+      @include fontRegular(17px,20px,#777777); 
+  }
+  .MuiFilledInput-root{  
+      border: 1px solid #09318B;
+      background-color: #F6F6F6;
+      border-radius:8px;
+      .MuiFilledInput-input {
+          padding: 27px 17px 11px;
+      }
+  }
+}
+
+// Checkboxes and radio button
+.blue-checkRadio{
+  width: 100%;
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+  .MuiCheckbox-root,.MuiButtonBase-root{
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+  .MuiFormControlLabel-label{
+    border: 1px solid #09318B;
+    background-color: #F6F6F6;
+    border-radius:8px;
+    padding: 15px ;
+    text-align: center;
+    width: 100%;
+    @include fontRegular(17px,20px,#777777); 
+    transition: 0.3s ease-in-out;
+  }
+  .Mui-checked{
+    &+  .MuiFormControlLabel-label{
+      background-color: #09318B;
+      color: #fff;
+    }
+  }
+}
+
+// step card and eligility from steps
+.cards-wrap{
+  @include cm-padding;
+  padding-top: 140px; 
+  .step-nav{
+    list-style: none;
+    border-bottom: 2px solid #09318B;
+    margin-bottom: 90px;
+    li{
+        width: 33.33%;
+        padding: 37px 15px 24px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        &::before{
+            content: "";
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            height: 13px;
+            background-color: $color-yellow;
+            width: 100%;
+        }
+        &:not(:last-of-type){
+          &::after{
+            content: "";
+              position: absolute;
+              height: 13px;
+              background-color: $color-white ;
+              width: 2px;
+              right: 0;
+              top: 0;
+          }
+        }
+        &:first-of-type{
+            &::before{
+                border-radius:10px 0 0 10px;
+            }
+        }
+        &:last-of-type{
+            &::before{
+                border-radius: 0 10px 10px 0;
+            }
+        }
+        &.filled{
+            &::before{
+                background-color: $color-blue;
+            }
+        }
+        span{
+            width: 33px;
+            height: 33px;
+            display: inline-flex;
+            background-color: #D9D9D9;
+            border-radius: 50%;
+            margin-right: 20px;
+            align-items: center;
+            justify-content: center;
+            @include fontBold(18px,1,#09318B); 
+        }
+        p{
+            text-align: center;
+            text-transform: uppercase; 
+            @include fontBold(21px,1,#262626); 
+        }
+    }
+  }
+  .estimate-time-title{
+    position: relative;
+    p{
+        position: absolute;
+        background-color: $color-yellow;
+        padding: 12px 26px 12px 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 0 10px 10px 0;
+        @include fontRegular(17px,20px,#262626);
+        margin: 0;
+        max-width: 276px;
+        left: 0;
+        top: -50px;
+        svg{
+            width: 53px;
+            margin-right: 18px;
+        }
+    }
+    h1{
+        text-align: center;
+        @include fontBold(28px,1,#09318B); 
+        max-width: 560px;
+        margin: 0 auto 40px;
+    }
+  }
+  .short-des-btn{
+    text-align: center;
+    max-width: 870px;
+    margin: 0 auto;
+    p{
+        @include fontRegular(22px,1,#262626); 
+        margin-bottom: 35px;
+    }
+    button.tertiary{
+        padding: 16px 50px;
+        @include fontRegular(14px !important,1.6 !important,#fff); 
+        border-radius: 5px;
+        svg{
+            width: 24px;
+            margin-right: 40px;
+        }
+    }
+  }
+  .card-form-fields{
+    .card-title{
+        margin-top: 60px;
+        margin-bottom: 20px;
+        h3{
+            padding-left: 100px;
+            @include fontBold(28px,1,#09318B); 
+            padding-bottom: 15px;
+            margin-bottom:0px;
+            position: relative;
+            &.max-975{
+              max-width: 975px;
+            }
+            &:not(.max-975){
+              max-width: 785px;
+            }
+            &::after{
+                content: "";
+                width: 376px;
+                max-width: 100%;
+                left: 0;
+                bottom: 0;
+                height: 2px;
+                background-color: #09318B;
+                position: absolute;
+            }
+        }
+        p{
+            margin-bottom: 0;
+            margin-top: 5px;
+            @include fontRegular(15px,20px,#262626); 
+        }
+    }
+    .form-fields{
+        margin-left: -12px;
+        margin-right: -12px;
+        .field-wrapper{
+            margin-top: 25px;
+            &.w-30{
+                width: 25.5%;
+                padding: 0 12px;
+            }
+            &.w-40{
+                width: 34%;
+                padding: 0 12px;
+            }
+        }
+    }
+  }
+  .step-btns{
+    margin-top: 78px;
+    button{
+        min-width: 176px;
+        font-size: 19px !important;
+        &+button{
+            margin-left: 25px;
+        }
+    }
+  }
+}
