--- a/src/pages/public/result/Result.scss
+++ b/src/pages/public/result/Result.scss
@@ -71,6 +71,12 @@
                                     display: inline-block;
                                     svg{
                                         width: 100%;
+                                        fill: #BFBFBF;
+                                    }
+                                    &.active{
+                                        svg{
+                                            fill: #FFCE00;
+                                        }
                                     }
                                 }
                             }
@@ -152,7 +158,7 @@
                 }
                 // redemption-flexibility
                 .redemption-flexibility{
-                    max-width: 676px;
+                    // max-width: 676px;
                     h3{
                         @include fontBold(22px,1,$color-blue);
                         margin:7px 0;
@@ -276,6 +282,19 @@
                         margin: 8px 0;
                     }
                 }
+            }
+        }
+    }
+    .show-more-btn{
+        margin: 60px 0 100px 0;
+        display: flex;
+        justify-content: center;
+    }
+    .info-text{
+        p{
+            @include fontRegular(17px,20px,$color-blue); 
+            span,a{
+                font-family: $Avenir-Bold;
             }
         }
     }
